KAFKA-86: Bump the dependencies to use the latest version of Kafka